<resources>
    <string name="app_name">EMA</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>

    <string name="action_settings">Configurações</string>
    <string name="title_activity_create_text">CreateTextActivity</string>

    <string name="save">Salvar</string>
    <string name="saved">Salvo</string>
    <string name="cancel">Cancelar</string>
    <string name="turnOn">Ligar</string>
    <string name="turnOff">Desligar</string>
    <string name="sound">Som</string>
    <string name="ok">OK</string>
    <string name="you">Você</string>
    <string name="made">fez</string>
    <string name="points">ponto(s)</string>
    <string name="noWordsMessage">Este usuário não possui atividade cadastrada. Por favor Contate o Administrador</string>
    <string name="NeedUserWords">Precisa de usuário(s) e palavra(s)</string>
    <string name="title_activity_receive_text">ReceivTextActivity</string>
    <string name="playedActivities">Atividades jogadas</string>
    <string name="highestPointing">Pontuação mais alta</string>
    <string name="lowestPointing">Pontuação mais baixa</string>
    <string name="Points">Ponto(s)</string>
    <string name="Choose_an_user">Escolha um usuário</string>

    <string name="title_activity_menu">EMA</string>

    <!-- Menu -->
    <string name="messages">Palavras</string>
    <string name="title_activity_photo_intent">PhotoIntentActivity</string>
    <string name="menu">Menu</string>
    <!-- Camera -->
    <string name="newPhoto">Nova Foto</string>
    <string name="Photo">Foto</string>
    <string name="cannot">Não pode</string>
    <string name="album_name">MeuABCAlbum</string>

    <string name="speech_toggle_on">Falar</string>
    <string name="speech_toggle_off">Falar</string>

    <string name="add">Adicionar</string>
    <string name="edit">Editar</string>
    <string name="delete">Remover</string>
    <string name="start_speaking">Start</string>
    <!--<string name="stop_speaking">Parar fala</string>-->
    <string name="title_activity_drag_and_drop">DragAndDropActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="next">próximo</string>
    <string name="information">informações</string>
    <string name="clear">&lt;</string>
    <string name="try_again">Tente novamente...</string>
    <string name="wrong">Errou</string>
    <string name="build_the_words">Construa a palavra</string>
    <string name="correct">Correto!</string>
    <string name="play">Jogar</string>
    <string name="finish">Terminar</string>
    <string name="deleteWord">Excluir Palavra</string>

    <string name="image">Imagem</string>
    <string name="newWord">Adicionar palavra</string>

    <string name="name">Nome</string>
    <string name="users">Usuários</string>
    <string name="settings">Configurações</string>
    <string name="newUser">Novo Usuário</string>
    <string name="deleteUsers">Remover Usuário(s)</string>
    <string name="updateData">Editar dados</string>
    <string name="goBack">Voltar</string>
    <string name="words">Palavras</string>
    <string name="Word">Palavra</string>
    <string name="wordAudio">Audio da palavra</string>
    <string name="onlyOneToEdit">Marque somente um usuário para editar</string>
    <string name="checkOneToEdit">Escolha um usuário para editar</string>
    <string name="dataAnalysis">Análise de dados</string>
    <string name="wasCreated">foi criado(a).</string>
    <string name="wasUpdated">foi atualizado.</string>

    <string name="noData">Sem dados.</string>

    <string name="level">Dificuldade</string>
    <string name="levelEasy">Fácil</string>
    <string name="levelIntermediate">Intermediário</string>
    <string name="levelHard">Difícil</string>

    <string name="language">Idioma</string>
    <string name="portuguese">Português</string>
    <string name="english">Inglês</string>

    <string name="password">Senha</string>
    <string name="activities">Atividades</string>

    <string name="checkDataTyped">Verifique os dados digitados</string>
    <string name="areYouSure">Tem certeza?</string>

    <string name="login">Entrar</string>
    <string name="logout">   Sair   </string>

    <string name="stats">  Estatísticas  </string>
    <!-- Colors -->
    <color name="white">#FFFFFF</color>
    <color name="blue">#1887C7</color>
    <color name="red">#E60E0E</color>
    <color name="green">#83BF25</color>
    <color name="black">#000000</color>
    <color name="gray">#E0E0E0</color>

    <string name="title_activity_build_challenges">BuildChallengesActivity</string>
    <string name="title_activity_play_challenges">PlayChallengesActivity</string>
    <string name="title_activity_scrabble">ScrabbleActivity</string>
    <string name="title_activity_abc">ABCActivity</string>
    <string name="title_activity_profiles">ProfilesActivity</string>
    <string name="title_activity_data_analysis">DataAnalysisActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_initial_loading">InitialLoadingActivity</string>
    <string name="title_activity_admin_form">AdminFormActivity</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="deleteUser">Remover Usuário</string>
    <string name="updateUser">Atualizar Usuário</string>
    <string name="showWord">Mostrar palavra</string>
    <string name="Yes">Sim</string>
    <string name="No">Não</string>
    <string name="ChooseAnotherNameAdm">Escolha outro nome, este é o nome do administrador.</string>
    <string name="ChooseAnotherName">Escolha outro nome.</string>
    <string name="imageOf">Imagem de </string>
    <string name="logo">Logo</string>
    <string name="comma">,</string>
    <string name="keySpace">          </string>
    <string name="erase">apagar</string>
    <string name="zero">0</string>
    <string name="rotate">girar</string>
    <string name="blank"></string>
    <string name="tutorial_admin_form1">Bem Vindo!</string>
    <string name="tutorial_admin_form2">Primeiro defina os dados do usuário administrador</string>
    <string name="tutorial_admin_form3">Defina o nome do usuário. Exemplo: admin</string>
    <string name="tutorial_admin_form4">Defina a senha do usuário. utilize mais de 6 caracteres</string>
    <string name="tutorial_admin_form5">Adicione um email para recuperar a senha de Administrador se necessário.</string>
    <string name="tutorial_admin_form6">Então clique em salvar.</string>
    <string name="noStats">Sem estatísticas no momento.</string>
    <string name="Email">Email</string>
    <string name="anEmailWillbeSend">Um email será enviado.</string>
    <string name="title_activity_new_admin_password">NewAdminPassword</string>
    <string name="ConfirmPassword">Confirmar Senha</string>
    <string name="newPassword">Nova Senha</string>
    <string name="ChangingPassword">Mudando Senha</string>
    <string name="YourNewPasswordIs">Sua nova senha é</string>
    <string name="invalidEmail">E-mail inválido.</string>
    <string name="passwordWithLessThan6">Senha com menos de 6 caracteres.</string>
    <string name="DifferentPasswords">Senhas Diferentes.</string>
    <string name="title_activity_abc_words">AbcWordsActivity</string>
</resources>
