<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Samuel Yuri Zvir
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ema.activities.admin.MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="119dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/menu"
        android:src="@mipmap/logo3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.525" />

    <org.ema.widget.DashboardLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:layout_weight="0.8"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            style="@style/DashboardButton"
            android:text="@string/activities"
            android:id="@+id/abc"
            android:onClick="onToABC"
            android:drawableTop="@drawable/abc_48p"/>

            <Button
                android:id="@+id/messages"
                style="@style/DashboardButton"
                android:text="@string/messages"
                android:onClick="onToWords"
                android:drawableTop="@drawable/ic_font_download_black_48dp"/>

        <Button
                style="@style/DashboardButton"
                android:text="@string/users"
                android:id="@+id/users"
                android:drawableTop="@drawable/ic_supervisor_account_black_48dp"
                android:onClick="onToProfiles"/>


            <Button
                style="@style/DashboardButton"
                android:text="@string/dataAnalysis"
                android:id="@+id/dataAnalysis"
                android:drawableTop="@drawable/ic_trending_up_black_48dp"
                android:onClick="onToDataAnalysis"/>

            <Button
                style="@style/DashboardButton"
                android:text="@string/settings"
                android:id="@+id/settings"
                android:drawableTop="@drawable/ic_build_black_48dp"
                android:onClick="onToSettings"
                />

            <Button
                style="@style/DashboardButton"
                android:text="@string/logout"
                android:id="@+id/button"
                android:drawableTop="@drawable/ic_directions_run_black_48dp"
                android:onClick="logout"/>
    </org.ema.widget.DashboardLayout>




</android.support.constraint.ConstraintLayout>