<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Samuel Yuri Zvir
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.com.ema.activities.admin.WordsManagementActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:weightSum="1">


            <TextView
                android:id="@+id/information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/words"
                android:textSize="25sp"
                android:typeface="normal"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:gravity="end"
                android:src="@mipmap/logo3"
                android:contentDescription="@string/logo"
                android:adjustViewBounds="true" />
    </GridLayout>




        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="253dp"
            android:orientation="horizontal"
            android:layout_weight="0.6"
            android:weightSum="1"
            android:baselineAligned="false">
            <!--<CheckBox-->
                <!--android:id="@+id/usePositionsCB"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wordsListView"
                android:layout_weight="1.67"
                android:choiceMode="multipleChoice"
                android:clickable="true"
                tools:ignore="InefficientWeight,NestedWeights" />
        </LinearLayout>
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.3"
        android:layout_height="0dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goBack"
            android:id="@+id/goBackBtn"
            android:onClick="goBack"
            tools:ignore="ButtonStyle" />

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/deleteButton"
        android:layout_gravity="center_horizontal"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:id="@+id/editButton"
            android:onClick="updateWord"
            android:layout_gravity="center_horizontal"
            tools:ignore="ButtonStyle" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/newWord"
                android:onClick="addWord"
            android:layout_marginRight="112dp"
                android:layout_marginEnd="112dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
