<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ema.activities.student.StudentMenuActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="304dp"
        android:layout_height="106dp"
        android:src="@mipmap/logo3"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:layout_width="0dp"
        android:layout_height="176dp"
        style="@style/StudentDashboardButton"
        android:text="@string/play"
        android:id="@+id/play"
        android:layout_gravity="center_vertical|center_horizontal"
        android:drawableTop="@drawable/abc"
        android:onClick="toPlay"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:layout_width="0dp"
        android:layout_height="111dp"
        style="@style/StudentDashboardButton"
        android:text="@string/logout"
        android:layout_gravity="center_vertical|center_horizontal"
        android:id="@+id/button"
        android:drawableTop="@drawable/exit_64dp"
        android:onClick="logout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="11dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/play" />


</android.support.constraint.ConstraintLayout>
