<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.samuelzvir.meuabc.activities.ScrabbleActivity">

    <LinearLayout
        android:id="@+id/unscrambled"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="7.26">



        <EditText
            android:id="@+id/answer"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:ems="10"
            android:enabled="false"
            android:inputType="text"
            android:textColorLink="@android:color/primary_text_dark"
            android:textSize="50sp"
            android:textStyle="bold"
            android:typeface="serif"
            tools:ignore="NestedWeights"
            android:background="#1887C7"></EditText>

        <Button
            android:id="@+id/clear"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onClick"
            android:drawableTop="@drawable/ic_backspace_black_24dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/images"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_gravity="center_vertical"
            android:src="@drawable/car"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/information"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textSize="@dimen/activity_horizontal_margin"
        android:typeface="serif" />

    <LinearLayout
        android:id="@+id/scrambled"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:orientation="horizontal">
    </LinearLayout>



    <LinearLayout
        android:id="@+id/speakers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nextButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:onClick="onClick"
            android:text="@string/next" />

        <ToggleButton
            android:id="@+id/speechToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textOff="@string/speech_toggle_on"
            android:textOn="@string/speech_toggle_off"
            android:layout_gravity="left" />
    </LinearLayout>
</LinearLayout>